<resources>
    <string name="app_name">Story App</string>
    <string name="email_address">Email address</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="username">Username</string>
    <string name="logo">logo</string>
    <string name="selamat_datang_di_soccer_story">Selamat datang di Soccer Story!</string>
    <string name="description_app">Ingin berbagi cerita dan ilmu tentang dunia sepak bola? Mulai dari berita terbaru, tips dan trik, analisis pertandingan, hingga sejarah dan perkembangan klub favoritmu. Semuanya ada di Soccer Story!</string>
    <string name="hallo_user">Hallo</string>
    <string name="logout">Logout</string>
    <string name="image_story">image_story</string>
    <string name="story_desc">
        Antony Matheus dos Santos (born 24 February 2000), simply known as Antony is a Brazilian professional footballer who plays as a right winger for Premier League club Manchester United and the Brazil national team.
    </string>
    <string name="story_username">Anthony Matheus</string>
    <string name="description">Description</string>
    <string name="enter_your_story_description">Enter your description story</string>
    <string name="enter_your_title_story">Enter your title story</string>
    <string name="galeri">Gallery</string>
    <string name="title">Title</string>
    <string name="upload">UPLOAD</string>
    <string name="camera">Camera</string>
    <string name="item_story">item story</string>
</resources>